--- a/app/src/main/res/layout/activity_selected_hours.xml
+++ b/app/src/main/res/layout/activity_selected_hours.xml
@@ -293,14 +293,14 @@
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_marginBottom="40dp"
-                        android:background="@drawable/pembayaran_bg"
+                        android:background="@drawable/search_bar"
                         android:gravity="center_vertical"
                         android:orientation="vertical"
                         android:padding="10dp">
 
                         <TextView
                             android:textSize="15dp"
-                            android:textColor="@color/white"
+                            android:textColor="@color/black"
                             android:textStyle="bold"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
@@ -320,7 +320,7 @@
                                 >
                                 <TextView
                                     android:textSize="12dp"
-                                    android:textColor="@color/white"
+                                    android:textColor="@color/black"
                                     android:layout_width="wrap_content"
                                     android:layout_height="wrap_content"
                                     android:text="Rp "
@@ -332,7 +332,7 @@
                                     android:layout_width="wrap_content"
                                     android:layout_height="match_parent"
                                     android:text="185.000"
-                                    android:textColor="@color/white" />
+                                    android:textColor="@color/black" />
 
                             </LinearLayout>
                             <View
