--- a/app/src/main/res/drawable/background_green.xml
+++ b/app/src/main/res/drawable/background_green.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
-    <solid android:color="#94FA88"/> <!-- Gray color -->
+    <solid android:color="@color/brown"/> <!-- Gray color -->
     <corners android:radius="15dp"/>
 </shape>
