--- a/app/src/main/res/drawable/spinner_background.xml
+++ b/app/src/main/res/drawable/spinner_background.xml
@@ -3,11 +3,11 @@
     <item>
         <!-- Background color -->
         <shape android:shape="rectangle">
-            <solid android:color="#FFFFFF" />
             <stroke android:width="1dp" android:color="#CCCCCC"/>
+            <corners android:radius="10dp"/>
         </shape>
     </item>
     <item android:right="16dp" android:gravity="end|center_vertical">
-        <bitmap android:src="@drawable/gopay" android:gravity="center"/>
+        <bitmap android:src="@drawable/arrow_down" android:gravity="center"/>
     </item>
 </layer-list>
