--- a/app/src/main/res/layout/activity_choose_hour.xml
+++ b/app/src/main/res/layout/activity_choose_hour.xml
@@ -155,7 +155,7 @@
                 android:layout_height="match_parent"
                 android:orientation="horizontal"
                 android:layout_margin="15dp"
-                android:background="@drawable/rounded_white_20">
+                android:background="@drawable/search_bar">
 
                 <LinearLayout
                     android:layout_width="0dp"
@@ -186,10 +186,15 @@
 
                 <Button
                     android:id="@+id/buttonShowSelected"
-                    android:layout_width="wrap_content"
+                    android:layout_width="113dp"
+                    android:layout_marginRight="10dp"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center"
-                    android:text="Show Selected Watches" />
+                    android:textColor="@drawable/button_text_color"
+                    android:background="@drawable/shape_button_selector"
+                    android:text="Booking" />
+
+
             </LinearLayout>
 
 
