--- a/app/src/main/res/layout/activity_pembayaran1.xml
+++ b/app/src/main/res/layout/activity_pembayaran1.xml
@@ -112,7 +112,8 @@
                             android:layout_marginTop="21dp"
                             android:layout_width="match_parent"
                             android:layout_height="61dp"
-                            android:background="@drawable/spinner_background">
+                            android:background="@drawable/search_bar"
+                            >
                             
 
                             <TextView
@@ -224,14 +225,14 @@
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_marginBottom="40dp"
-                        android:background="@drawable/pembayaran_bg"
+                        android:background="@drawable/search_bar"
                         android:gravity="center_vertical"
                         android:orientation="vertical"
                         android:padding="10dp">
 
                         <TextView
                             android:textSize="15dp"
-                            android:textColor="@color/white"
+                            android:textColor="@color/black"
                             android:textStyle="bold"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
@@ -251,7 +252,7 @@
                                 >
                                 <TextView
                                     android:textSize="12dp"
-                                    android:textColor="@color/white"
+                                    android:textColor="@color/black"
                                     android:layout_width="wrap_content"
                                     android:layout_height="wrap_content"
                                     android:text="Rp "
@@ -263,7 +264,7 @@
                                     android:layout_width="wrap_content"
                                     android:layout_height="match_parent"
                                     android:text="185.000"
-                                    android:textColor="@color/white" />
+                                    android:textColor="@color/black" />
 
                             </LinearLayout>
                             <View
