--- a/app/src/main/res/layout/detail_page.xml
+++ b/app/src/main/res/layout/detail_page.xml
@@ -189,12 +189,12 @@
                             android:layout_width="20dp"
                             android:layout_height="20dp"
                             android:layout_marginEnd="8dp"
-                            android:src="@android:drawable/ic_dialog_email" />
+                            android:src="@drawable/chat1" />
 
                         <TextView
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-                            android:text="Chat"
+                            android:text="+62812345678"
                             android:textColor="@android:color/black" />
                     </LinearLayout>
                 </LinearLayout>
@@ -203,7 +203,7 @@
                     android:layout_width="64dp"
                     android:layout_height="64dp"
                     android:layout_gravity="center"
-                    android:src="@android:drawable/ic_menu_myplaces" />
+                    android:src="@drawable/profile" />
             </LinearLayout>
 
             <View
@@ -340,7 +340,7 @@
                 android:paddingStart="16dp"
                 android:paddingEnd="16dp"
                 android:layout_marginTop="8dp"
-                android:layout_marginBottom="100dp">
+                android:layout_marginBottom="10dp">
 
                 <ImageView
                     android:layout_width="20dp"
@@ -368,21 +368,23 @@
                     android:textColor="#FF8E33"
                     android:clickable="true"
                     android:focusable="true"/>
+
             </LinearLayout>
 
-            <!-- Orange outlined box for the map -->
-            <FrameLayout
-                android:layout_width="match_parent"
-                android:layout_height="200dp"
-                android:layout_margin="0dp"
-                android:background="@drawable/orange_border">
+            <!-- Placeholder for the map image -->
+            <ImageView
+                android:layout_gravity="center"
+                android:layout_width="341dp"
+                android:layout_height="271dp"
+                android:src="@drawable/maps" />
 
-                <!-- Placeholder for the map image -->
-                <ImageView
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:src="@drawable/img" />
-            </FrameLayout>
+            <View
+                android:layout_width="10dp"
+                android:layout_height="100dp"
+                android:layout_marginTop="0dp"
+                android:layout_marginBottom="10dp"
+                />
+
 
         </LinearLayout>
     </ScrollView>
@@ -399,26 +401,33 @@
         app:layout_anchorGravity=""
         android:layout_gravity="bottom">
 
-        <TextView
-            android:id="@+id/textViewPriceDetail"
-            android:layout_width="0dp"
-            android:layout_height="match_parent"
-            android:layout_weight="1"
-            android:gravity="center_vertical"
-            android:text="Total Biaya\nRp 85.000 / Jam"
-            android:textColor="@android:color/black"
-            android:textSize="16sp"
-            android:textStyle="bold" />
+        <LinearLayout
+            android:background="@drawable/search_bar"
+            android:padding="10dp"
+            android:layout_gravity="center_horizontal"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+            <TextView
+                android:id="@+id/textViewPriceDetail"
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
+                android:layout_weight="1"
+                android:gravity="center_vertical"
+                android:text="Total Biaya\nRp 85.000 / Jam"
+                android:textColor="@android:color/black"
+                android:textSize="16sp"
+                android:textStyle="bold" />
 
-        <Button
-            android:id="@+id/bookingButton"
-            android:layout_width="wrap_content"
-            android:layout_height="match_parent"
-            android:backgroundTint="#FF8E33"
-            android:paddingLeft="16dp"
-            android:paddingRight="16dp"
-            android:text="Booking"
-            android:textColor="@android:color/white" />
+            <Button
+                android:id="@+id/bookingButton"
+                android:layout_width="113dp"
+                android:layout_height="wrap_content"
+                android:layout_gravity="end"
+                android:textColor="@drawable/button_text_color"
+                android:background="@drawable/shape_button_selector"
+                android:text="Booking" />
+        </LinearLayout>
+
     </LinearLayout>
 
 
