--- a/app/src/main/res/layout/item_card_besar.xml
+++ b/app/src/main/res/layout/item_card_besar.xml
@@ -79,44 +79,31 @@
             android:layout_marginRight="25.81dp"
             android:text="Bogor"
             android:textColor="@color/black"
-            android:textSize="13dp" />
+            android:textSize="15dp" />
     </LinearLayout>
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="1dp"
-        android:orientation="horizontal">
+        android:orientation="horizontal"
+        android:layout_marginLeft="22dp"
+        android:layout_marginRight="29dp">
 
-        <View
-            android:layout_width="23.32dp"
-            android:layout_height="0dp" />
-
-        <TextView
-            android:layout_width="0dp"
-            android:layout_height="20.14dp"
-            android:layout_weight="1"
-            android:text="Rp."
-            android:textColor="@color/black"
-            android:textSize="13dp" />
         <TextView
             android:id="@+id/priceText"
-            android:layout_width="180dp"
-            android:layout_height="20.14dp"
+            android:layout_width="150dp"
+            android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:text="250.000 / jam"
+            android:text="Rp. 250.000 / jam"
             android:textColor="@color/black"
-            android:textSize="13dp" />
+            android:textSize="15sp" />
 
         <ImageView
-            android:layout_width="23.32dp"
-            android:layout_height="20.14dp"
-            android:layout_marginRight="10dp"
+            android:id="@+id/ratingIcon"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="10dp"
             android:src="@drawable/bintang"/>
-
-        <View
-            android:layout_width="2.12dp"
-            android:layout_height="0dp" />
 
         <TextView
             android:id="@+id/ratingText"
@@ -125,15 +112,16 @@
             android:layout_marginStart="5dp"
             android:text="4.5"
             android:textColor="@color/black"
-            android:textSize="13sp"/>
+            android:textSize="15sp"/>
         <TextView
+
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text=" / 5"
             android:textColor="@color/black"
-            android:layout_marginRight="45dp"
-            android:textSize="13sp"/>
-
+            android:textSize="15sp"/>
     </LinearLayout>
+
+
 
 </LinearLayout>
