--- a/app/src/main/res/layout/studio_favorit.xml
+++ b/app/src/main/res/layout/studio_favorit.xml
@@ -56,6 +56,10 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="10dp" />
 
+        <View
+            android:layout_width="match_parent"
+            android:layout_height="51.82dp" />
+
     </LinearLayout>
 </ScrollView>
 
